fixed spacing on toolkit section

--- a/assets/global.css
+++ b/assets/global.css
@@ -35,6 +35,8 @@ h2 {
   font-family: 'Prospectus Regular', serif;
   font-size: 5.6em;
   line-height: 0.8;
+  margin-bottom: 20px;
+
 }
 
 h3 {
